# rfdatahub

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml  settings.ini
.github/workflows/: deploy.yaml  test.yaml
extracao/: __main__.py  _modidx.py  constants.py  estacoes.py  format.py  location.py  stations.py
extracao/datasources/: __main__.py  aeronautica.py  aisgeo.py  aisweb.py  base.py  connectors.py  icao.py  mosaico.py  redemet.py  sitarweb.py  smp.py  srd.py  telecom.py
nbs/: 00_constants.ipynb  00b_format.ipynb  01a_connectors.ipynb  01b_base.ipynb  01c_sitarweb.ipynb  01d_mosaico.ipynb  01e_srd.ipynb  01f_telecom.ipynb  01g_smp.ipynb  02a_icao.ipynb  02b_aisweb.ipynb  02c_aisgeo.ipynb  02d_redemet.ipynb  03_aero.ipynb  04_estacoes.ipynb  _04_eda.ipynb  _05_main.ipynb  _EDA.ipynb  _debug_merging.ipynb  _smp.ipynb  _smp_eda.ipynb  _smp_uplink_teórico.ipynb  index.ipynb
scripts/: aero.py  extract.py  main.py  smp.py  srd.py  validate_coords.py
src/rfdatahub/: __main__.py  format.py  location.py  stations.py
src/rfdatahub/datasources/: __main__.py  aeronautica.py  aisgeo.py  aisweb.py  base.py  connectors.py  mosaico.py  sitarweb.py  smp.py  srd.py  telecom.py
src/rfdatahub/datasources/arquivos/: VHF_COM.csv  VHF_NAV.csv  VOR_ILS_DME_Channel.csv  canalizacao_smp.csv  municipios.csv  radares.csv
src/scripts/: radcom.py  smp.py  stel.py  telecom.py  update.sh  validate_coords.py
